# gwatch

./: CMakeLists.txt  README.md
expected/: argv_valid_4_expected.txt  argv_valid_8_expected.txt
lib/: gwatch.h
src/: main.cpp  test_file.cpp  tests.cpp
